add libnvidia-encode1 package
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/313@3580 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -531,6 +531,18 @@ Description: NVIDIA CUDA nvcuvid runtime library
  .
  This package contains the nvcuvid runtime library.
 
+Package: libnvidia-encode1
+Architecture: i386 amd64
+Multi-Arch: same
+Pre-Depends:
+ ${misc:Pre-Depends}
+Depends:
+ ${shlibs:Depends}, ${misc:Depends}
+Description: NVIDIA nvidia-encode runtime library
+ This could be NVENC, but is currently undocumented.
+ .
+ This package contains the nvidia-encode runtime library.
+
 Package: libnvidia-ml1
 Architecture: i386 amd64
 Multi-Arch: same
