--- a/debian/detect/nvidia-detect.in
+++ b/debian/detect/nvidia-detect.in
@@ -79,6 +79,11 @@ then
 	VERSIONS[295]=295.59
 fi
 
+if grep -q -i $NVGA $IDLISTDIR/nvidia-304.ids
+then
+	VERSIONS[304]=304.64
+fi
+
 if grep -q -i $NVGA $IDLISTDIR/nvidia.ids
 then
        	# 999 means current
@@ -140,6 +145,30 @@ fi
 		fi;
 	elif grep -q "wheezy\|^7" /etc/debian_version;
 	then
+		if [[ -n ${VERSIONS[304]} ]]; then
+			if [[ -n ${VERSIONS[173]} ]]; then
+				if [[ -n ${VERSIONS[96]} ]]; then
+				       	echo "Your card is supported by all driver versions.";
+				else
+					echo "Your card is supported by the default drivers and version 173.";
+				fi;
+			else
+				echo "Your card is supported by the default drivers.";
+			fi;
+			PACKAGE="nvidia-glx"
+		elif [[ -n ${VERSIONS[173]} ]]; then
+			echo "Your card is only supported up to the 173.14 legacy drivers series.";
+			PACKAGE="nvidia-glx-legacy-173xx"
+		elif [[ -n ${VERSIONS[96]} ]]; then
+			echo "Your card is only supported up to the 96.43 legacy drivers series.";
+			PACKAGE="nvidia-glx-legacy-96xx"
+		elif [[ -n ${VERSIONS[999]} ]]; then
+			echo "Uh oh. Your card is only supported by a newer version of the current drivers series.";
+		else
+			echo "Uh oh. Your card is only supported by the 71.86 legacy drivers series, which is not in any current Debian suite.";
+		fi;
+	elif grep -q "jessie\|^8" /etc/debian_version;
+	then
 		if [[ -n ${VERSIONS[999]} ]]; then
 			if [[ -n ${VERSIONS[173]} ]]; then
 				if [[ -n ${VERSIONS[96]} ]]; then
@@ -151,6 +180,9 @@ fi
 				echo "Your card is supported by the default drivers.";
 			fi;
 			PACKAGE="nvidia-glx"
+		elif [[ -n ${VERSIONS[304]} ]]; then
+			echo "Your card is only supported up to the 304 legacy drivers series.";
+			PACKAGE="nvidia-glx-legacy-304xx"
 		elif [[ -n ${VERSIONS[173]} ]]; then
 			echo "Your card is only supported up to the 173.14 legacy drivers series.";
 			PACKAGE="nvidia-glx-legacy-173xx"
