libcuda1: add Depends: nvidia-support
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3700 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -424,6 +424,7 @@ Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
+ nvidia-support,
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
  nvidia-kernel${nvidia:Legacy}-dkms (= ${binary:Version})
