--- a/debian/control
+++ b/debian/control
@@ -106,17 +106,6 @@ Description: NVIDIA binary Xorg driver${nvidia:LegacyDesc}
  See /usr/share/doc/nvidia-glx${nvidia:Legacy}/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
 
-Package: nvidia-glx-ia32
-Section: non-free/oldlibs
-Priority: extra
-Architecture: amd64
-Depends:
- libgl1-nvidia${nvidia:Legacy}-glx-ia32,
- ${misc:Depends}
-Description: NVIDIA 32-bit libraries${nvidia:LegacyDesc} (transitional package)
- This is a dummy package to aid switching to
- libgl1-nvidia${nvidia:Legacy}-glx-ia32.
-
 Package: libgl1-nvidia-glx
 Architecture: i386 amd64
 Multi-Arch: same
@@ -140,7 +129,9 @@ Provides:
 Conflicts:
  libgl1-nvidia${nvidia:Legacy}-dev,
  nvidia-glx${nvidia:Legacy}-dev,
- libgl1-nvidia${nvidia:Legacy}-glx-ia32 [i386],
+ libgl1-nvidia${nvidia:Legacy}-glx-ia32,
+ nvidia-glx${nvidia:Legacy}-ia32,
+ libgl1-nvidia-glx-ia32-any,
 Breaks:
  libgl1-nvidia${nvidia:Legacy}-glx-ia32 (<< ${nvidia:Version}) [amd64],
  nvidia-glx (<< 275.09.07-3),
@@ -160,6 +151,8 @@ Replaces:
  nvidia-glx${nvidia:Legacy} (<< 195.36.31),
  libgl1-nvidia${nvidia:Legacy}-dev,
  nvidia-glx${nvidia:Legacy}-dev,
+ libgl1-nvidia${nvidia:Legacy}-glx-ia32,
+ nvidia-glx${nvidia:Legacy}-ia32,
 Description: NVIDIA binary OpenGL libraries${nvidia:LegacyDesc}
  .
  These binary libraries provide optimized hardware acceleration of
@@ -189,39 +182,6 @@ Description: NVIDIA binary XvMC library${nvidia:LegacyDesc}
  .
  See /usr/share/doc/libgl1-nvidia${nvidia:Legacy}-glx/README.txt.gz
  for instructions how to enable XvMC acceleration.
-
-Package: libgl1-nvidia-glx-ia32
-Section: non-free/oldlibs
-Priority: extra
-Architecture: amd64
-Pre-Depends:
- libc6-i386 (>= 2.9-18),
- nvidia-installer-cleanup,
-Depends:
- libgl1-nvidia-alternatives-ia32,
- ${shlibs:Depends}, ${misc:Depends}
-Recommends:
- libgl1-nvidia${nvidia:Legacy}-glx-i386,
-Conflicts:
- libgl1-nvidia-glx-ia32,
- libgl1-nvidia-glx-ia32-any,
- fglrx-glx-ia32,
- nvidia-glx-ia32 (<< 195.36.31),
- nvidia-glx-legacy-ia32,
- nvidia-glx-legacy-71xx-ia32,
- nvidia-glx-legacy-96xx-ia32,
- nvidia-glx-legacy-173xx-ia32,
-Breaks:
- libgl1-nvidia${nvidia:Legacy}-glx (<< ${nvidia:Version}),
-Replaces:
- nvidia-glx${nvidia:Legacy}-ia32 (<< 195.36.31),
-Description: please switch to multiarch libgl1-nvidia${nvidia:Legacy}-glx:i386
- .
- This is an empty transitional package to aid switching to multiarch.
- .
- Run the following commands to install the multiarch library:
- * dpkg --add-architecture i386 ; apt-get update
- * apt-get install libgl1-nvidia${nvidia:Legacy}-glx:i386
 
 Package: nvidia-alternative
 Architecture: i386 amd64
@@ -339,14 +299,13 @@ Suggests:
 Enhances:
  libvdpau1,
 Provides:
- nvidia-vdpau-driver-i386 [i386],
  vdpau-driver,
 Conflicts:
  nvidia-libvdpau,
  nvidia-libvdpau-dev,
  nvidia-libvdpau1,
  nvidia-libvdpau1-driver,
- nvidia-vdpau-driver-ia32 [i386],
+ nvidia-vdpau-driver-ia32,
 Breaks:
  libvdpau1 (<< 0.4.1-3),
  nvidia-glx (<< 180.51),
@@ -356,6 +315,7 @@ Replaces:
  nvidia-libvdpau-dev,
  nvidia-libvdpau1,
  nvidia-libvdpau1-driver,
+ nvidia-vdpau-driver-ia32,
 Description: NVIDIA vdpau driver
  .
  These libraries provide the Video Decode and Presentation API for Unix.
@@ -371,37 +331,6 @@ Description: NVIDIA vdpau driver
  nvidia-kernel${nvidia:Legacy}-source packages
  for building the kernel module required by this package.
  This will provide nvidia-kernel-${nvidia:Version}${nvidia:Perfkit}.
-
-Package: nvidia-vdpau-driver-ia32
-Section: non-free/oldlibs
-Priority: extra
-Architecture: amd64
-Pre-Depends:
- libc6-i386 (>= 2.9-18),
- nvidia-installer-cleanup,
-Depends:
- ${shlibs:Depends}, ${misc:Depends}
-Recommends:
- nvidia-vdpau-driver-i386,
-Conflicts:
- nvidia-libvdpau,
- nvidia-libvdpau1,
- nvidia-libvdpau1-ia32,
- nvidia-libvdpau1-driver-ia32,
-Breaks:
- nvidia-glx (<< 180.51),
-Replaces:
- nvidia-glx (<< 180.51),
- nvidia-libvdpau,
- nvidia-libvdpau1,
- nvidia-libvdpau1-ia32,
- nvidia-libvdpau1-driver-ia32,
-Description: please switch to multiarch nvidia-vdpau-driver:i386
- This is an empty transitional package to aid switching to multiarch.
- .
- Run the following commands to install the multiarch library:
- * dpkg --add-architecture i386 ; apt-get update
- * apt-get install nvidia-vdpau-driver:i386
 
 Package: nvidia-smi
 Section: non-free/utils
@@ -451,15 +380,14 @@ Recommends:
 Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
-Provides:
- libcuda1-i386 [i386],
 Conflicts:
  libcuda1-dev,
- libcuda1-ia32 [i386],
+ libcuda1-ia32,
 Replaces:
  nvidia-glx (<< 185.18.14-2),
  nvidia-glx-dev (<< 185.18.14-2),
  libcuda1-dev,
+ libcuda1-ia32,
 Homepage: http://www.nvidia.com/CUDA
 Description: NVIDIA CUDA runtime library
  .
@@ -477,26 +405,6 @@ Description: NVIDIA CUDA runtime library
  for building the kernel module required by this package.
  This will provide nvidia-kernel-${nvidia:Version}${nvidia:Perfkit}.
 
-Package: libcuda1-ia32
-Section: non-free/oldlibs
-Priority: extra
-Architecture: amd64
-Pre-Depends:
- libc6-i386 (>= 2.9-18),
-Depends:
- ${shlibs:Depends}, ${misc:Depends}
-Recommends:
- libcuda1-i386,
-Replaces:
- nvidia-glx-ia32 (<< 185.18.14-2),
-Homepage: http://www.nvidia.com/CUDA
-Description: please switch to multiarch libcuda1:i386
- This is an empty transitional package to aid switching to multiarch.
- .
- Run the following commands to install the multiarch library:
- * dpkg --add-architecture i386 ; apt-get update
- * apt-get install libcuda1:i386
-
 Package: libnvidia-compiler
 Architecture: i386 amd64
 Multi-Arch: same
@@ -504,40 +412,18 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
-Provides:
- libnvidia-compiler-i386 [i386],
 Conflicts:
  libnvidia-compiler1,
- libnvidia-compiler-ia32 [i386],
+ libnvidia-compiler-ia32,
 Replaces:
  libnvidia-compiler1,
+ libnvidia-compiler-ia32,
 Description: NVIDIA runtime compiler library
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
  graphics processing units (GPUs) to be used for massively parallel
  general purpose computation.
  .
  This package contains the runtime compiler library.
-
-Package: libnvidia-compiler-ia32
-Section: non-free/oldlibs
-Priority: extra
-Architecture: amd64
-Pre-Depends:
- libc6-i386 (>= 2.9-18),
-Depends:
- ${shlibs:Depends}, ${misc:Depends}
-Recommends:
- libnvidia-compiler-i386,
-Conflicts:
- libnvidia-compiler1-ia32,
-Replaces:
- libnvidia-compiler1-ia32,
-Description: please switch to multiarch libnvidia-compiler:i386
- This is an empty transitional package to aid switching to multiarch.
- .
- Run the following commands to install the multiarch library:
- * dpkg --add-architecture i386 ; apt-get update
- * apt-get install libnvidia-compiler:i386
 
 Package: libnvcuvid1
 Architecture: i386 amd64
@@ -604,10 +490,11 @@ Depends:
 Enhances:
  libopencl1,
 Conflicts:
- nvidia-opencl-icd-ia32 [i386],
+ nvidia-opencl-icd-ia32,
+Replaces:
+ nvidia-opencl-icd-ia32,
 Provides:
  opencl-icd,
- nvidia-opencl-icd-i386 [i386],
 Description: NVIDIA OpenCL ICD
  OpenCL (Open Computing Language) is a multivendor open standard for
  general-purpose parallel programming of heterogeneous systems that include
@@ -615,21 +502,6 @@ Description: NVIDIA OpenCL ICD
  .
  This metapackage provides the NVIDIA installable client driver (ICD) for
  OpenCL.
-
-Package: nvidia-opencl-icd-ia32
-Section: non-free/oldlibs
-Priority: extra
-Architecture: amd64
-Depends:
- ${misc:Depends}
-Recommends:
- nvidia-opencl-icd-i386,
-Description: please switch to multiarch nvidia-opencl-icd:i386
- This is an empty transitional package to aid switching to multiarch.
- .
- Run the following commands to install the multiarch library:
- * dpkg --add-architecture i386 ; apt-get update
- * apt-get install nvidia-opencl-icd:i386
 
 Package: nvidia-libopencl1
 Architecture: i386 amd64
@@ -642,14 +514,14 @@ Recommends:
  opencl-icd | nvidia-opencl-icd,
 Provides:
  libopencl1,
- nvidia-libopencl1-i386 [i386],
 Conflicts:
  libopencl1,
  nvidia-libopencl1-dev,
- nvidia-libopencl1-ia32 [i386],
+ nvidia-libopencl1-ia32,
 Replaces:
  libopencl1,
  nvidia-libopencl1-dev,
+ nvidia-libopencl1-ia32,
 Description: NVIDIA OpenCL library
  OpenCL (Open Computing Language) is a multivendor open standard for
  general-purpose parallel programming of heterogeneous systems that include
@@ -657,23 +529,6 @@ Description: NVIDIA OpenCL library
  .
  This package contains the installable client driver loader (ICD Loader)
  library provided by NVIDIA.
-
-Package: nvidia-libopencl1-ia32
-Section: non-free/oldlibs
-Priority: extra
-Architecture: amd64
-Pre-Depends:
- libc6-i386 (>= 2.9-18),
-Depends:
- ${shlibs:Depends}, ${misc:Depends}
-Recommends:
- nvidia-libopencl1-i386,
-Description: please switch to multiarch nvidia-libopencl1:i386
- This is an empty transitional package to aid switching to multiarch.
- .
- Run the following commands to install the multiarch library:
- * dpkg --add-architecture i386 ; apt-get update
- * apt-get install nvidia-libopencl1:i386
 
 Package: libgl1-nvidia-alternatives
 Section: non-free/oldlibs
