--- a/debian/control
+++ b/debian/control
@@ -188,10 +188,10 @@ Architecture: i386 amd64
 Multi-Arch: foreign
 Depends:
  glx-alternative-nvidia (>= 0.2),
- libgl1-nvidia-alternatives (>= 275.09.07-4),
- libglx-nvidia-alternatives (>= 275.09.07-4),
  ${misc:Depends}
 Conflicts:
+ libgl1-nvidia-alternatives,
+ libglx-nvidia-alternatives,
  libgl1-nvidia-alternatives-ia32,
 Breaks:
  nvidia-glx${nvidia:Legacy} (<< 275.09.07-2),
@@ -531,52 +531,6 @@ Description: NVIDIA OpenCL library
  .
  This package contains the installable client driver loader (ICD Loader)
  library provided by NVIDIA.
-
-Package: libgl1-nvidia-alternatives
-Section: non-free/oldlibs
-Architecture: i386 amd64
-Depends:
- glx-alternative-mesa,
- glx-alternative-nvidia,
- ${misc:Depends}
-Breaks:
- nvidia-glx (<< 195.36.31-2),
- nvidia-glx-dev (<< 195.36.31-2),
- libgl1-nvidia-glx (<< 275.09.07-2),
- nvidia-glx-legacy-71xx (<< 71.86.14),
- nvidia-glx-legacy-71xx-dev (<< 71.86.14),
- libgl1-nvidia-legacy-71xx-glx (<< 71.86.14-3),
- nvidia-glx-legacy-96xx (<< 96.43.18),
- nvidia-glx-legacy-96xx-dev (<< 96.43.18),
- libgl1-nvidia-legacy-96xx-glx (<< 96.43.19-2),
- nvidia-glx-legacy-173xx (<< 173.14.27),
- nvidia-glx-legacy-173xx-dev (<< 173.14.27),
- libgl1-nvidia-legacy-173xx-glx (<< 173.14.30-2),
-Description: transition libGL.so* diversions to glx-alternative-nvidia
- This is a transitional package aiding the upgrade to glx-alternative-nvidia.
- The libGL.so* diversions are now handled by glx-diversions and the
- alternatives by glx-alternative-mesa.
- .
- This package can be safely removed from the system once nothing depends on it.
-
-Package: libglx-nvidia-alternatives
-Section: non-free/oldlibs
-Architecture: i386 amd64
-Depends:
- glx-alternative-mesa,
- glx-alternative-nvidia,
- ${misc:Depends}
-Breaks:
- nvidia-glx (<< 275.09.07-2),
- nvidia-glx-legacy-71xx (<< 71.86.14-3),
- nvidia-glx-legacy-96xx (<< 96.43.19-2),
- nvidia-glx-legacy-173xx (<< 173.14.30-2),
-Description: transition libgl.so diversions to glx-alternative-nvidia
- This is a transitional package aiding the upgrade to glx-alternative-nvidia.
- The libglx.so diversions are now handled by glx-diversions and the
- alternatives by glx-alternative-mesa.
- .
- This package can be safely removed from the system once nothing depends on it.
 
 Package: nvidia-detect
 Section: non-free/x11
