--- a/debian/nvidia-alternative.lintian-overrides.in
+++ b/debian/nvidia-alternative.lintian-overrides.in
@@ -1,2 +1,6 @@
 # This directory is used as a master alternative.
 package-contains-empty-directory usr/lib/#PRIVATE#/
+
+# Slave alternatives may be installed there.
+package-contains-empty-directory usr/share/applications/
+package-contains-empty-directory usr/share/man/man1/
