--- a/debian/libnvidia-compiler.lintian-overrides.in
+++ b/debian/libnvidia-compiler.lintian-overrides.in
@@ -1,4 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
+[i386]: binary-file-built-without-LFS-support
 binary-has-unneeded-section
 shlib-with-executable-stack
 [i386]: shlib-with-non-pic-code
