--- a/debian/control
+++ b/debian/control
@@ -122,7 +122,7 @@ Conflicts:
  nvidia-glx${nvidia:Legacy}-ia32,
  libgl1-nvidia-glx-ia32-any,
 Breaks:
- Breaks: ia32-libs (<< 1:0),
+ ia32-libs (<< 1:0),
 Replaces:
  libgl1-nvidia${nvidia:Legacy}-glx-ia32,
  nvidia-glx${nvidia:Legacy}-ia32,
