prefer nvidia-opencl-icd over opencl-icd (from branches/310 @ r3570)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3821 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -464,7 +464,7 @@ Pre-Depends:
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
- opencl-icd | nvidia-opencl-icd,
+ nvidia-opencl-icd | opencl-icd,
 Provides:
  libopencl1,
 Conflicts:
