--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Standards-Version: 3.9.4
 Homepage: http://www.nvidia.com
 XS-Autobuild: yes
 
-Package: nvidia-glx
+Package: nvidia-driver
 Section: non-free/x11
 Architecture: i386 amd64
 Pre-Depends:
@@ -42,6 +42,10 @@ Suggests:
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Provides:
  nvidia-glx-any,
+Breaks:
+ nvidia-glx (<< 304.88-4),
+Replaces:
+ nvidia-glx (<< 304.88-4),
 Description: NVIDIA metapackage${nvidia:LegacyDesc}
  .
  This metapackage depends on the NVIDIA binary driver and libraries
@@ -58,6 +62,16 @@ Description: NVIDIA metapackage${nvidia:LegacyDesc}
  .
  See /usr/share/doc/nvidia-glx${nvidia:Legacy}/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
+
+Package: nvidia-glx
+Section: non-free/oldlibs
+Priority: extra
+Architecture: i386 amd64
+Depends:
+ nvidia-driver,
+ ${misc:Depends}
+Description: transition to nvidia-driver
+ This is a dummy transitional package to aid switching to nvidia-driver.
 
 Package: xserver-xorg-video-nvidia
 Section: non-free/x11
