--- a/debian/control
+++ b/debian/control
@@ -374,6 +374,8 @@ Conflicts:
  nvidia-cuda-proxy,
 Replaces:
  libcuda1-ia32,
+Provides:
+ libcuda-5.0-1,
 Homepage: http://www.nvidia.com/CUDA
 Description: NVIDIA CUDA runtime library
  .
