add legacy marker
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3934 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -45,9 +45,9 @@ Suggests:
 Provides:
  nvidia-glx-any,
 Breaks:
- nvidia-glx (<< 304.88-4),
+ nvidia-glx${nvidia:Legacy} (<< 304.88-4),
 Replaces:
- nvidia-glx (<< 304.88-4),
+ nvidia-glx${nvidia:Legacy} (<< 304.88-4),
 Description: NVIDIA metapackage${nvidia:LegacyDesc}
  .
  This metapackage depends on the NVIDIA binary driver and libraries
