fix armhf build
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/319@3950 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -148,7 +148,9 @@ binary binary-arch binary-indep build clean install:
 override_dh_auto_clean:
 	rm -fr .pc
 	rm -f NVIDIA-Linux-i386 NVIDIA-Linux-amd64 NVIDIA-Linux
+	rm -f NVIDIA-Linux-armhf
 	rm -fr $(dirname_x86) $(dirname_x86_64)
+	rm -fr $(dirname_armhf)
 	rm -fr debian/temp
 	rm -fr kernel-source-tree
 	rm -f nvidia.ids nv-kernel.ids nv-readme.ids pci.ids.nvidia*
