--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -1,7 +1,7 @@
 # The NVIDIA license does not allow any form of modification.
-[i386]: binary-file-built-without-LFS-support
+[!amd64]: binary-file-built-without-LFS-support
 embedded-library usr/lib*/libcuda.so.#VERSION#: zlib
-shlib-with-executable-stack
+[!armhf]: shlib-with-executable-stack
 [i386]: shlib-with-non-pic-code
 [i386]: spelling-error-in-binary
 unstripped-binary-or-object
