--- a/debian/rules
+++ b/debian/rules
@@ -57,7 +57,7 @@ AUTOKEEP	 = debian/watch
 AUTOCLEAN	 = $(filter-out $(AUTOKEEP),$(AUTOGEN))
 
 module_source	 = debian/nvidia-kernel$(legacy)-source/usr/src/modules/nvidia-kernel$(legacy)
-module_tbz	 = $(subst /modules/,/,$(module_source)).tar.bz2
+module_txz	 = $(subst /modules/,/,$(module_source)).tar.xz
 dkms_source	 = debian/nvidia-kernel$(legacy)-dkms/usr/src/nvidia-$(version)
 
 comma		 = ,
@@ -212,10 +212,10 @@ build-kernel-source-tree: install-into-tmp
 	chmod a+x $(module_source)/conftest.sh
 
 	# Build the tarball.
-	tar cfj $(module_tbz) \
+	tar cfJ $(module_txz) \
 	    --owner=root --group=src -C $(module_source)/../.. \
 	    --exclude '*.in' --exclude '.svn' modules
-	tar tfvj $(module_tbz)
+	tar tfvJ $(module_txz)
 
 build-kernel-dkms-tree: build-kernel-source-tree
 	# Use the nvidia-kernel-source source to create the DKMS tree.
