--- a/debian/module/debian/rules.in
+++ b/debian/module/debian/rules.in
@@ -43,7 +43,7 @@ build-indep:
 build-stamp: configure-stamp
 	dh_prep
 	dh_quilt_patch
-	$(MAKE) LINUXDIR=$(KSRC)
+	$(MAKE) SYSSRC=$(KSRC)
 	touch $@
 
 get_built_using	?= $(filter-out (=),$(shell dpkg-query -f='$${source:Package} (=$${source:Version})' -W $1))
@@ -74,7 +74,7 @@ clean:
 	test -f debian/control || cp debian/control.template debian/control
 	dh_testdir
 	dh_testroot
-	$(MAKE) LINUXDIR=$(KSRC) $(KPKG_EXTRAV_ARG) clean
+	$(MAKE) SYSSRC=$(KSRC) $(KPKG_EXTRAV_ARG) clean
 	dh_quilt_unpatch || quilt --quiltrc /dev/null pop -af
 	dh_clean debian/control debian/install
 
