--- a/debian/rules
+++ b/debian/rules
@@ -188,6 +188,7 @@ build-kernel-source-tree: install-into-tmp
 	# We don't want these makefiles that don't work with kbuild.
 	rm $(module_source)/makefile
 	rm $(module_source)/Makefile.nvidia
+	mv $(module_source)/Makefile.kbuild $(module_source)/Kbuild
 
 	# We want both 32 and 64 bit versions of nv-kernel.o.  Do not use a
 	# name matching *.o to prevent accidental deletion by some clean
