disable silent build
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3960 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/Makefile
+++ b/debian/module/Makefile
@@ -8,14 +8,28 @@ ifneq ($(KERNELRELEASE),)
 $(error Running inside Kbuild should not use the Makefile)
 endif
 
-ifndef SYSSRC
-RUNNING_REL := $(shell uname -r)
-SYSSRC := /lib/modules/$(RUNNING_REL)/build
+ifdef SYSSRC
+ KERNEL_SOURCES	 = $(SYSSRC)
+else
+ KERNEL_UNAME	:= $(shell uname -r)
+ KERNEL_SOURCES	 = /lib/modules/$(KERNEL_UNAME)/build
 endif
+
+ifndef NV_VERBOSE
+ ifneq ($(strip $(QUIET)),1)
+ NV_VERBOSE=1
+ else
+ NV_VERBOSE=0
+ endif
+endif
+
+KBUILD_PARAMS += KBUILD_VERBOSE=$(NV_VERBOSE)
+KBUILD_PARAMS += -C $(KERNEL_SOURCES) M=$(PWD)
+
 
 default: modules
 .PHONY: default
 
 # hand over to kbuild
 %::
-	$(MAKE) -C $(SYSSRC) M=$(PWD) $@
+	$(MAKE) $(KBUILD_PARAMS) $@
