--- a/debian/rules
+++ b/debian/rules
@@ -23,10 +23,12 @@ legacy			 = $(if $(NVIDIA_LEGACY),-legacy-$(NVIDIA_LEGACY)xx)
 legacy_description	 = $(if $(NVIDIA_LEGACY), ($(NVIDIA_LEGACY)xx legacy version))
 perfkit			 =
 watch_pattern		 = $(or $(WATCH_PATTERN),$(if $(WATCH_VERSION),$(WATCH_VERSION)(?:\.[\d\.\-]+)?),[\d\.\-]+)
-filename_x86		 = $(NVIDIA_FILENAME_X86)
-filename_x86_64		 = $(NVIDIA_FILENAME_X86_64)
-dirname_x86		 = $(NVIDIA_DIRNAME_X86)
-dirname_x86_64		 = $(NVIDIA_DIRNAME_X86_64)
+filename_i386		 = $(NVIDIA_FILENAME_X86)
+filename_amd64		 = $(NVIDIA_FILENAME_X86_64)
+dirname_i386		 = $(NVIDIA_DIRNAME_X86)
+dirname_amd64		 = $(NVIDIA_DIRNAME_X86_64)
+ARCH_LIST		?= i386 amd64
+ARCH_DEPS_i386		?= amd64
 
 # system libdir
 libdir			 = usr/lib$(if $(MULTIARCH),/$(DEB_HOST_MULTIARCH))
@@ -70,29 +72,22 @@ xorg_provides	 = xorg-driver-video
 autogen: $(AUTOGEN)
 prepare: autogen unpack-stamp nvidia.ids compare-copyright-license
 
+NVIDIA-Linux-%:
+	sh ${filename_$*} --extract-only
+	ln -s ${dirname_$*} $@
+	test -f $@/README.txt || \
+		mv $@/usr/share/doc/README.txt $@/README.txt 2>/dev/null || \
+		mv $@/usr/share/doc/README $@/README.txt
+	test -f $@/NVIDIA_Changelog || \
+		mv $@/usr/share/doc/NVIDIA_Changelog $@/
+	test -d $@/kernel || \
+		mv $@/usr/src/nv $@/kernel
+	-gunzip $@/*.1.gz
 
-unpack-stamp: ${filename_x86} ${filename_x86_64}
+# Unpack all architectures, we may need files from all of them.
+unpack-stamp: $(patsubst %,NVIDIA-Linux-%,$(ARCH_LIST))
 	dh_testdir
-	# extract both so we can fetch the kernel object code for both arches
-	sh ${filename_x86} --extract-only
-	sh ${filename_x86_64} --extract-only
-	ln -s ${dirname_x86} NVIDIA-Linux-i386
-	ln -s ${dirname_x86_64} NVIDIA-Linux-amd64
 	ln -s NVIDIA-Linux-$(DEB_HOST_ARCH) NVIDIA-Linux
-	test -f NVIDIA-Linux-i386/README.txt || \
-		mv NVIDIA-Linux-i386/usr/share/doc/README.txt NVIDIA-Linux-i386/README.txt 2>/dev/null || \
-		mv NVIDIA-Linux-i386/usr/share/doc/README NVIDIA-Linux-i386/README.txt
-	test -f NVIDIA-Linux-amd64/README.txt || \
-		mv NVIDIA-Linux-amd64/usr/share/doc/README.txt NVIDIA-Linux-amd64/README.txt 2>/dev/null || \
-		mv NVIDIA-Linux-amd64/usr/share/doc/README NVIDIA-Linux-amd64/README.txt
-	test -f NVIDIA-Linux-amd64/NVIDIA_Changelog || \
-		mv NVIDIA-Linux-amd64/usr/share/doc/NVIDIA_Changelog NVIDIA-Linux-amd64/
-	test -d NVIDIA-Linux-i386/kernel || \
-		mv NVIDIA-Linux-i386/usr/src/nv NVIDIA-Linux-i386/kernel
-	test -d NVIDIA-Linux-amd64/kernel || \
-		mv NVIDIA-Linux-amd64/usr/src/nv NVIDIA-Linux-amd64/kernel
-	gunzip NVIDIA-Linux-i386/*.1.gz
-	gunzip NVIDIA-Linux-amd64/*.1.gz
 	QUILT_PATCHES=debian/patches-manual quilt --quiltrc /dev/null push -a || test $$? = 2
 	ls -al
 	touch $@
@@ -142,8 +137,8 @@ binary binary-arch binary-indep build clean install:
 
 override_dh_auto_clean:
 	rm -fr .pc
-	rm -f NVIDIA-Linux-i386 NVIDIA-Linux-amd64 NVIDIA-Linux
-	rm -fr $(dirname_x86) $(dirname_x86_64)
+	rm -f NVIDIA-Linux
+	rm -fr $(foreach a,$(ARCH_LIST),NVIDIA-Linux-$a $(dirname_$a))
 	rm -fr debian/temp
 	rm -fr kernel-source-tree
 	rm -f nvidia.ids nv-kernel.ids nv-readme.ids pci.ids.nvidia*
@@ -190,14 +185,10 @@ build-kernel-source-tree: install-into-tmp
 	rm $(module_source)/Makefile.nvidia
 	mv $(module_source)/Makefile.kbuild $(module_source)/Kbuild
 
-	# We want both 32 and 64 bit versions of nv-kernel.o.  Do not use a
-	# name matching *.o to prevent accidental deletion by some clean
-	# target.
-	cp -a NVIDIA-Linux-i386/kernel/nv-kernel.o \
-	    $(module_source)/nv-kernel-i386.o_shipped
-	cp -a NVIDIA-Linux-amd64/kernel/nv-kernel.o \
-	    $(module_source)/nv-kernel-amd64.o_shipped
+	# We may need nv-kernel.o for several architectures to accomodate
+	# all kernel flavors. Use Kbuild-compatible names.
 	rm -f $(module_source)/nv-kernel.o
+	$(foreach a,$(DEB_HOST_ARCH) $(ARCH_DEPS_$(DEB_HOST_ARCH)),cp -a NVIDIA-Linux-$a/kernel/nv-kernel.o $(module_source)/nv-kernel-$a.o_shipped ;)
 
 	# Install a debian/ tree and new conftest files that work purely
 	# with kbuild and don't require root into the module package.
