--- a/debian/rules
+++ b/debian/rules
@@ -265,6 +265,7 @@ override_dh_gencontrol:
 		-V'nvidia:LegacyDesc=$(legacy_description)' \
 		-V'nvidia:Perfkit=$(perfkit)' \
 		-V'nvidia-settings=$(NVIDIA_SETTINGS)' \
+		-Vnvidia:kmod:Description="`cat debian/control.kmod`" \
 		-Vnvidia:Models="`cat debian/control.models`"
 
 # Do not run dh_strip here.  The NVIDIA license says:
