--- a/debian/control
+++ b/debian/control
@@ -40,8 +40,7 @@ Recommends:
  ${nvidia-settings},
  libgl1-${nvidia}-glx-i386 [amd64],
 Suggests:
- nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
- | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
+ ${nvidia:kmod:source},
 Provides:
  nvidia-glx-any,
 Breaks:
@@ -93,8 +92,7 @@ Recommends:
  | nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
  ${nvidia-settings},
 Suggests:
- nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
- | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
+ ${nvidia:kmod:source},
 Provides:
  xserver-xorg-video-nvidia-any,
  ${nvidia:xorgProvides},
@@ -127,8 +125,7 @@ Recommends:
  | nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
  libxvmcnvidia1,
 Suggests:
- nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
- | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
+ ${nvidia:kmod:source},
 Provides:
  libgl1-${nvidia}-glx-i386 [i386],
  libgl1-nvidia-glx-any,
@@ -283,8 +280,7 @@ Recommends:
  nvidia-kernel${nvidia:Legacy}-dkms (= ${binary:Version})
  | nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
 Suggests:
- nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
- | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
+ ${nvidia:kmod:source},
 Enhances:
  libvdpau1,
 Provides:
@@ -318,8 +314,7 @@ Recommends:
  nvidia-kernel${nvidia:Legacy}-dkms (= ${binary:Version})
  | nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
 Suggests:
- nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
- | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
+ ${nvidia:kmod:source},
 Description: NVIDIA System Management Interface
  The NVIDIA System Management Interface "nvidia-smi" program provides
  system state and diagnostic information for the NVIDIA Tesla Visual
@@ -360,8 +355,7 @@ Recommends:
  nvidia-smi,
 Suggests:
  nvidia-cuda-mps,
- nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
- | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
+ ${nvidia:kmod:source},
 Conflicts:
  libcuda1-ia32,
  nvidia-cuda-proxy,
