make dkms dependency unversioned, satisfied in oldstable
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3981 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-nvidia/packages/nvidia-graphic
 Build-Depends:
  debhelper (>= 9),
  xz-utils,
- dkms (>= 2.1.1.1),
+ dkms,
  libxext6,
  libxvmc1,
  quilt,
@@ -195,7 +195,7 @@ Multi-Arch: foreign
 Pre-Depends:
  nvidia-installer-cleanup,
 Depends:
- dkms (>= 2.1),
+ dkms,
  nvidia-kernel-common (>= 20110213),
  ${misc:Depends}
 Recommends:
