--- a/debian/nvidia-driver.README.Debian.in
+++ b/debian/nvidia-driver.README.Debian.in
@@ -9,7 +9,7 @@ Welcome to the Debian NVIDIA packages. This document has notes on the
 X Server and GL libraries of the NVIDIA driver offering.
 
 For any news on this package check
-http://bugs.debian.org/nvidia-glx#LEGACY#
+http://bugs.debian.org/#NVIDIA#-driver
 
 
 NOTES ABOUT GLX DRIVER AND OPENGL:
@@ -40,7 +40,7 @@ may want to enable TwinView, too, by adding this section:
 
 There are many more settings that can be tuned in xorg.conf.  For file
 format description and general options please see the xorg.conf(5) manpage.
-See /usr/share/doc/nvidia-glx#LEGACY#/README.txt.gz
+See /usr/share/doc/#NVIDIA#-driver/README.txt.gz
 for descriptions of all supported NVIDIA driver specific options.
 
 
@@ -53,7 +53,7 @@ Bugs in the the "graphics functionality" like graphical distortions,
 performance regressions, hardware support, ... can only be fixed upstream
 and should be reported directly to NVIDIA because this includes collecting
 system information (with the nvidia-bug-report.sh script that is included
-in the nvidia-glx#LEGACY# package) on the affected system.
+in the #NVIDIA#-driver package) on the affected system.
 NVIDIA's bug reporting instructions can be found here:
   https://devtalk.nvidia.com/default/topic/522835/linux/if-you-have-a-problem-please-read-this-first/
 You may additionally report the problem in the distribution's bug tracker,
@@ -91,7 +91,7 @@ on GeForce 6 series and GeForce 7 series GPUs, you need to modify
 /etc/X11/XvMCConfig to contain a reference to the NVIDIA library
     libXvMCNVIDIA_dynamic.so.1
 instead.  For more information about XvMC support see Appendix G in
-/usr/share/doc/nvidia-glx#LEGACY#/README.txt.gz
+/usr/share/doc/#NVIDIA#-driver/README.txt.gz
 
 
 NOTES ABOUT WARNINGS emitted during installation/upgrade:
